--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* customize class to re-use */
+#searchInput:focus + label {
+  @apply border-orange-400;
+}
+
+/* navbar element hover style */
+.hover-border {
+  @apply border border-[#232f3e] hover:border-white px-1 rounded-sm;
+}
