--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,14 @@
 .open-menu {
   @apply translate-x-0;
 }
+
+.activeLink {
+  @apply relative;
+}
+.activeLink::before {
+  content: "";
+  position: absolute;
+  top: 17px;
+  left: -8px;
+  @apply border-2 block w-3 h-3 border-slate-300 bg-orange-500 rounded-full;
+}
