--- a/src/index.css
+++ b/src/index.css
@@ -101,6 +101,6 @@
   @apply absolute w-[22.5px] h-[22.5px] top-[0.5px] left-[0.5px] duration-200  rounded-full bg-slate-50;
 }
 
-.user-prifile-links {
+.user-profile-links {
   @apply text-lg px-2 py-0.5  my-2 rounded-l-md hover:bg-slate-500 hover:text-slate-50 duration-150;
 }
